--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -198,6 +198,7 @@ jobs:
             target: dev
             platforms: "linux/amd64"
     steps:
+      - uses: actions/checkout@v4
       - name: Filter build
         uses: dorny/paths-filter@v2
         id: filter
@@ -219,7 +220,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: althack
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -230,10 +231,10 @@ jobs:
           target: ${{ matrix.target }}
           platforms: ${{ matrix.platforms }}
           tags: |
-            althack/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}
-            althack/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}-${{ steps.date.outputs.date }}
-          cache-from: type=registry,ref=althack/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}-buildcache
-          cache-to: type=registry,ref=althack/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}-buildcache,mode=max
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}-${{ steps.date.outputs.date }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}-buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}-buildcache,mode=max
 
   complete:
     needs:
