Add vscode github actiosn to vscode extensions in devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,8 @@
 				"njpwerner.autodocstring",
 				"eamodio.gitlens",
 				"ms-python.black-formatter",
-				"ms-python.flake8"
+				"ms-python.flake8",
+				"github.vscode-github-actions"
 			]
 		}
 	},
