Add jazzy to dockerfiles

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -89,6 +89,7 @@
       "options": [
         "noetic",
         "rolling",
+        "jazzy",
         "iron",
         "iron-cuda",
         "humble",
