--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -64,17 +64,33 @@ jobs:
           - label: ros2
             tag: rolling
             target: base
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64"
           - label: ros2
             tag: rolling
             target: dev
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64"
           - label: ros2
             tag: rolling
             target: full
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64"
           - label: ros2
             tag: rolling
+            target: gazebo
+            platforms: "linux/amd64"
+          - label: ros2
+            tag: jazzy
+            target: base
+            platforms: "linux/amd64,linux/arm64"
+          - label: ros2
+            tag: jazzy
+            target: dev
+            platforms: "linux/amd64,linux/arm64"
+          - label: ros2
+            tag: jazzy
+            target: full
+            platforms: "linux/amd64,linux/arm64"
+          - label: ros2
+            tag: jazzy
             target: gazebo
             platforms: "linux/amd64"
           - label: ros2
@@ -219,6 +235,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v3
+        if: ${{ steps.filter.outputs.docker == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
