--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -80,15 +80,15 @@ jobs:
           - label: ros2
             tag: jazzy
             target: base
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64,linux/arm64/v8"
           - label: ros2
             tag: jazzy
             target: dev
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64,linux/arm64/v8"
           - label: ros2
             tag: jazzy
             target: full
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64,linux/arm64/v8"
           - label: ros2
             tag: jazzy
             target: gazebo
