--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -66,7 +66,10 @@
       "group": {
         "kind": "build",
         "isDefault": true
-      }
+      },
+      "dependsOn": [
+        "generate"
+      ]
     },
     {
       "label": "upgrade",
