--- a/templates.yml
+++ b/templates.yml
@@ -68,7 +68,7 @@ ros2:
     ros_distro: rolling
     targets:
       - target: base
-        platforms: "linux/amd64,linux/arm64/v8"
+        platforms: "linux/amd64"
       - target: dev
         platforms: "linux/amd64"
       - target: full
@@ -83,11 +83,11 @@ ros2:
     ros_distro: jazzy
     targets:
       - target: base
-        platforms: "linux/amd64,linux/arm64/v8"
+        platforms: "linux/amd64,linux/arm64"
       - target: dev
-        platforms: "linux/amd64"
+        platforms: "linux/amd64,linux/arm64"
       - target: full
-        platforms: "linux/amd64"
+        platforms: "linux/amd64,linux/arm64"
       - target: gazebo
         platforms: "linux/amd64"
     python_version: "3.12"
