--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,3 +28,33 @@ jobs:
         run: |
           pip install pydocstyle
           pydocstyle .
+  env-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          file: ros2/rolling.Dockerfile
+          target: base
+          tags: app:local
+          outputs: |
+            type=docker,name=app:local
+          cache-from: |
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/ros2:rolling-buildcache
+          cache-to: |
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/ros2:rolling-buildcache,mode=max
+      - name: Run environment comparison
+        run: |
+          .github/scripts/env-compare.py app:local rolling
