Add rolling-cuda image

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -89,6 +89,7 @@
       "options": [
         "noetic",
         "rolling",
+        "rolling-cuda",
         "jazzy",
         "iron",
         "iron-cuda",
