--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -64,7 +64,7 @@ jobs:
           - label: ros2
             tag: rolling
             target: base
-            platforms: "linux/amd64"
+            platforms: "linux/amd64,linux/arm64/v8"
           - label: ros2
             tag: rolling
             target: dev
@@ -80,15 +80,15 @@ jobs:
           - label: ros2
             tag: jazzy
             target: base
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64,linux/arm64/v8"
           - label: ros2
             tag: jazzy
             target: dev
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64"
           - label: ros2
             tag: jazzy
             target: full
-            platforms: "linux/amd64,linux/arm64"
+            platforms: "linux/amd64"
           - label: ros2
             tag: jazzy
             target: gazebo
