--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -234,11 +234,13 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v3
+        if: github.actor == github.repository_owner
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Log in to GHCR
         uses: docker/login-action@v3
+        if: github.actor == github.repository_owner
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
