--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -234,7 +234,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v3
-        if: github.actor == github.repository_owner
+        if: ${{ github.actor == github.repository_owner }}
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
