Adding rolling cuda image (#536)
—-
Co-authored-by: elsayedelsheikh <elsayed.elsheikh97@gmail.com>
Co-authored-by: Allison Thackston <allison@allisonthackston.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -77,6 +77,22 @@ jobs:
             target: gazebo
             platforms: "linux/amd64"
           - label: ros2
+            tag: rolling-cuda
+            target: base
+            platforms: "linux/amd64"
+          - label: ros2
+            tag: rolling-cuda
+            target: dev
+            platforms: "linux/amd64"
+          - label: ros2
+            tag: rolling-cuda
+            target: full
+            platforms: "linux/amd64"
+          - label: ros2
+            tag: rolling-cuda
+            target: gazebo
+            platforms: "linux/amd64"
+          - label: ros2
             tag: jazzy
             target: base
             platforms: "linux/amd64,linux/arm64/v8"
