--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,12 +53,6 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
@@ -109,17 +103,40 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4    
+      - name: Extract Label and Tag
+        id: extract
+        run: |
+          # Extract the full filename (e.g., label/tag.Dockerfile)
+          filename="${{ matrix.dockerfile }}"
+          
+          # Extract label (e.g., 'label')
+          label=$(dirname "$filename")
+          
+          # Extract tag (e.g., 'tag')
+          tag=$(basename "$filename" | cut -d. -f1)
+          
+          echo "Label: $label, Tag: $tag"
+          
+          # Set outputs for subsequent steps
+          echo "label=$label" >> $GITHUB_OUTPUT
+          echo "tag=$tag" >> $GITHUB_OUTPUT
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Test dockerfile build
         if: ${{ matrix.dockerfile != 'none' }}
         uses: docker/build-push-action@v6
         with:
           push: false
           file: ${{ matrix.dockerfile }}
+          tags: |
+             ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }}
           cache-from: |
-            type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ matrix.label }}:${{ matrix.tag }}-buildcache
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }}-buildcache
             type=gha
-          cache-to:            
+          cache-to:
             type=gha,mode=max
 
   complete:
