--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,12 +1,12 @@
 name: Dockerfiles
 # Test and push dockerfiles when merged into main and on schedule.
 on:
-  push:
-    branches:
-      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: "0 0 1 * *"
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 # Cancel in-progress funs of the same workflow
@@ -207,6 +207,13 @@ jobs:
             platforms: "linux/amd64"
     steps:
       - uses: actions/checkout@v4
+      - name: Filter build
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            docker:
+              - ${{ matrix.label }}/${{ matrix.tag }}.Dockerfile
       - name: Set current date
         id: date
         run: |
@@ -231,7 +238,9 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v6
+        if: ${{ steps.filter.outputs.docker == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
         with:
+          push: ${{ github.ref == 'refs/heads/main' }}
           file: ${{ matrix.label }}/${{ matrix.tag }}.Dockerfile
           target: ${{ matrix.target }}
           platforms: ${{ matrix.platforms }}
@@ -241,7 +250,5 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}
           cache-from: |
             type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ matrix.label }}:${{ matrix.tag }}-buildcache
-            type=gha
           cache-to: |
             type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ matrix.label }}:${{ matrix.tag }}-buildcache,mode=max
-            type=gha,mode=max
