--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,5 @@
 name: Dockerfiles
-# Test and push dockerfiles when they change.
-# Test for pull request, push dockerfiles when merged into main.
+# Test and push dockerfiles when merged into main and on schedule.
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -8,37 +7,15 @@ on:
   push:
     branches:
       - main
-    paths:
-      - '**.Dockerfile'
-      - .github/workflows/docker.yml
-  pull_request_target:
   workflow_dispatch:
 
 # Cancel in-progress funs of the same workflow
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  generate:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-          cache: pip
-      - name: Verify dockerfiles
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          ./generate.py
-          git diff --exit-code
-
   docker:
-    needs: generate
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -273,16 +250,5 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/${{ matrix.label }}:${{ matrix.tag }}-${{ matrix.target }}
           cache-from: |
             type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ matrix.label }}:${{ matrix.tag }}-buildcache
-            type=gha
           cache-to: |
             type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ matrix.label }}:${{ matrix.tag }}-buildcache,mode=max
-            type=gha,mode=max
-
-  complete:
-    needs:
-      - generate
-      - docker
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check
-        run: echo "Completed successfully!"
