Add gazebo ionic

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -190,6 +190,22 @@ jobs:
             target: dev
             platforms: "linux/amd64"
           - label: gz
+            tag: ionic
+            target: base
+            platforms: "linux/amd64"
+          - label: gz
+            tag: ionic
+            target: dev
+            platforms: "linux/amd64"
+          - label: gz
+            tag: ionic-cuda
+            target: base
+            platforms: "linux/amd64"
+          - label: gz
+            tag: ionic-cuda
+            target: dev
+            platforms: "linux/amd64"
+          - label: gz
             tag: harmonic
             target: base
             platforms: "linux/amd64"
