--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -99,6 +99,8 @@
         "gazebo11",
         "fortress",
         "citadel",
+        "ionic",
+        "ionic-cuda",
         "harmonic",
         "harmonic-cuda",
         "garden",
