--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,9 @@ updates:
       pydantic-deps:
         patterns:
           - "pydantic*"
+      python-deps:
+        patterns:
+          - "*"
     open-pull-requests-limit: 10
   - package-ecosystem: docker
     directory: "/"
