--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -90,6 +90,7 @@
         "noetic",
         "rolling",
         "rolling-cuda",
+        "kilted",
         "jazzy",
         "jazzy-cuda",
         "iron",
