--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,13 +42,38 @@ jobs:
           ./generate.py
           git diff --exit-code
 
+  env-check:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: read
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          file: ros2/rolling.Dockerfile
+          target: base
+          tags: app:local
+          outputs: |
+            type=docker,name=app:local
+          cache-from: |
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/ros2:rolling-buildcache
+      - name: Run environment comparison
+        run: |
+          .github/scripts/env-compare.py app:local rolling
+
   changes:
     runs-on: ubuntu-latest
     permissions:
       contents: read  # Required to analyze file changes
     outputs:
       dockerfiles: ${{ steps.filter.outputs.dockerfiles }}
-      has_changes: ${{ steps.filter.outputs.has_changes }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -113,15 +138,12 @@ jobs:
              ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }},app:local
           cache-from: |
             type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }}-buildcache
-      - name: Run environment comparison
-        if: ${{ matrix.dockerfile != 'none' }}
-        run: |
-          .github/scripts/env-compare.py app:local ${{ steps.extract.outputs.tag }}
 
   complete:
     needs:
       - lint
       - generate
+      - env-check
       - docker-build
     runs-on: ubuntu-latest
     steps:
