--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,6 +74,7 @@ jobs:
       fail-fast: false
       matrix:
         dockerfile: ${{ fromJSON(needs.changes.outputs.dockerfiles) }}
+        target: ["base", "dev", "full", "gazebo"]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -108,16 +109,17 @@ jobs:
         with:
           push: false
           file: ${{ matrix.dockerfile }}
+          target: ${{ matrix.target }}
           tags: |
-             ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }},app:local
+             ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }}-${{ matrix.target }},app:${{ steps.extract.outputs.tag }}-${{ matrix.target }}
           cache-from: |
             type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }}-buildcache
           outputs: |
-            type=docker,name=app:local
+            type=docker,name=app:${{ steps.extract.outputs.tag }}-${{ matrix.target }}
       - name: Run environment comparison
         if: ${{ matrix.dockerfile != 'none'}}
         run: |
-          .github/scripts/env-compare.py app:local ${{ steps.extract.outputs.tag }}
+          .github/scripts/env-compare.py app:${{ steps.extract.outputs.tag }}-${{ matrix.target }} ${{ steps.extract.outputs.tag }}
 
   complete:
     needs:
