--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,32 +42,6 @@ jobs:
           ./generate.py
           git diff --exit-code
 
-  env-check:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: read
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          push: false
-          file: ros2/rolling.Dockerfile
-          target: base
-          tags: app:local
-          outputs: |
-            type=docker,name=app:local
-          cache-from: |
-            type=registry,ref=ghcr.io/${{ github.repository_owner }}/ros2:rolling-buildcache
-      - name: Run environment comparison
-        run: |
-          .github/scripts/env-compare.py app:local rolling
-
   changes:
     runs-on: ubuntu-latest
     permissions:
@@ -100,7 +74,11 @@ jobs:
       fail-fast: false
       matrix:
         dockerfile: ${{ fromJSON(needs.changes.outputs.dockerfiles) }}
+        target: ["base", "dev", "full", "gazebo"]
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: read
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4    
@@ -131,16 +109,22 @@ jobs:
         with:
           push: false
           file: ${{ matrix.dockerfile }}
+          target: ${{ matrix.target }}
           tags: |
-             ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }}
+             ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }}-${{ matrix.target }},app:${{ steps.extract.outputs.tag }}-${{ matrix.target }}
           cache-from: |
             type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ steps.extract.outputs.label }}:${{ steps.extract.outputs.tag }}-buildcache
+          outputs: |
+            type=docker,name=app:${{ steps.extract.outputs.tag }}-${{ matrix.target }}
+      - name: Run environment comparison
+        if: ${{ matrix.dockerfile != 'none'}}
+        run: |
+          .github/scripts/env-compare.py app:${{ steps.extract.outputs.tag }}-${{ matrix.target }} ${{ steps.extract.outputs.tag }}
 
   complete:
     needs:
       - lint
       - generate
-      - env-check
       - docker-build
     runs-on: ubuntu-latest
     steps:
