--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ mccabe==0.7.0
 mdurl==0.1.2
 packaging==25.0
 pycodestyle==2.14.0
-pydantic==2.11.3
-pydantic_core==2.33.1
+pydantic==2.11.9
+pydantic_core==2.33.2
 pyflakes==3.4.0
 Pygments==2.19.2
 pyparsing==3.2.4
@@ -23,6 +23,7 @@ ruamel.yaml.clib==0.2.12
 shellingham==1.5.4
 tqdm==4.67.1
 typer==0.19.1
+typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 websocket-client==1.8.0
